# SystemLib

./: CMakeLists.txt  Common.cmake  Generate.bat  README.md
Source/: CMakeLists.txt
Source/Include/Linux/: LinuxFileSystem.h  LinuxTimeSystem.h
Source/Include/System/: FileSystem.h  SystemMacros.h  SystemTypeDefines.h  TimeSystem.h
Source/Include/Windows/: WindowsFileSystem.h  WindowsTimeSystem.h
Source/SourceFile/Linux/: LinuxFileSystem.cpp  LinuxTimeSystem.cpp
Source/SourceFile/System/: FileSystem.cpp  TimeSystem.cpp
Source/SourceFile/Windows/: WindowsFileSystem.cpp  WindowsTimeSystem.cpp
